// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cal::local_datetime > it does the correct checks 1`] = `
[
  {
    "kind": "datetime",
    "local": true,
    "offset": false,
    "precision": null,
  },
]
`;

exports[`cal::local_time > it does the correct checks 1`] = `
[
  {
    "kind": "time",
    "precision": null,
  },
]
`;

exports[`std::datetime > it does the correct checks 1`] = `
[
  {
    "kind": "datetime",
    "local": false,
    "offset": true,
    "precision": null,
  },
]
`;

exports[`std::duration > it does the correct checks 1`] = `
[
  {
    "kind": "duration",
  },
]
`;

exports[`std::int16 > it does the correct checks 1`] = `
[
  {
    "kind": "int",
    "message": undefined,
  },
  {
    "inclusive": true,
    "kind": "min",
    "message": undefined,
    "value": -32768,
  },
  {
    "inclusive": true,
    "kind": "max",
    "message": undefined,
    "value": 32767,
  },
]
`;

exports[`std::int32 > it does the correct checks 1`] = `
[
  {
    "kind": "int",
    "message": undefined,
  },
  {
    "inclusive": true,
    "kind": "min",
    "message": undefined,
    "value": -2147483648,
  },
  {
    "inclusive": true,
    "kind": "max",
    "message": undefined,
    "value": 2147483647,
  },
]
`;

exports[`std::int64 > it does the correct checks 1`] = `
[
  {
    "inclusive": true,
    "kind": "min",
    "message": undefined,
    "value": -9223372036854775808n,
  },
  {
    "inclusive": true,
    "kind": "max",
    "message": undefined,
    "value": 9223372036854775807n,
  },
]
`;

exports[`std::uuid > it does the correct checks 1`] = `
[
  {
    "kind": "uuid",
  },
]
`;
